# conan-mysql-connector-c

./: CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
patches/: 0001-DH-is-hidden-and-cannot-be-dereferenced-in-OpenSSL-1.patch  0002-Fix-in-mysys_ssl.patch
test_package/: conanfile.py
